// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultistepForm Stories realExampleshould match snapshot 1`] = `
<body>
  <div>
    <div
      class="flex items-center justify-between"
    >
      <h3
        class="text-lg font-semibold text-gray-800"
      >
        Build your custom file
      </h3>
      <div
        class="flex items-center space-x-6"
      >
        <span
          class=" rounded-full bg-data-700 border-4 w-4 h-4 border-data-400"
        />
        <span
          class=" rounded-full w-2 h-2 bg-gray-400"
        />
        <span
          class=" rounded-full w-2 h-2 bg-gray-400"
        />
        <span
          class=" rounded-full w-2 h-2 bg-gray-400"
        />
        <span
          class=" rounded-full w-2 h-2 bg-gray-400"
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="flex flex-col p-3 bg-white border border-gray-300 rounded md:flex-row md:items-center md:justify-between hover:border-data-500"
        style="opacity: 0; transform: translateY(20px) translateZ(0);"
      >
        <div
          class="md:w-2/3"
        >
          <div
            class="flex items-center justify-start space-x-3"
          >
            <h3
              class="text-2xl font-extrabold text-gray-900"
            >
              Model
            </h3>
          </div>
          <p
            class="text-sm text-gray-700 "
            style="opacity: 0; height: 0px; transform: translateY(-10px) translateZ(0);"
          >
            Quisque ultrices odio ut tellus congue, scelerisque egestas augue accumsan.
          </p>
        </div>
        <div
          class="w-full mt-4 md:w-1/3 md:mt-0"
        >
          <div
            class="flex items-center justify-center"
          >
            <div
              class="w-full max-w-xs mx-auto"
            >
              <div
                class="space-y-1"
              >
                <div
                  class="relative"
                >
                  <span
                    class="inline-block w-full rounded-md shadow-sm"
                  >
                    <button
                      aria-haspopup="true"
                      aria-label="Model"
                      class="relative w-full py-2 pl-3 pr-10 text-left transition duration-150 ease-in-out bg-white border border-gray-300 rounded-md cursor-default focus:outline-none focus:shadow-outline-blue focus:border-blue-300 sm:text-sm sm:leading-5"
                      id="headlessui-listbox-button-2"
                      type="button"
                    >
                      <span
                        class="flex items-center h-5 truncate"
                      />
                      <span
                        class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
                      >
                        <svg
                          class="w-5 h-5 text-gray-400"
                          fill="none"
                          stroke="currentColor"
                          viewBox="0 0 20 20"
                        >
                          <path
                            d="M7 7l3-3 3 3m0 6l-3 3-3-3"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="1.5"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MultistepForm Stories twoStepsshould match snapshot 1`] = `
<body>
  <div>
    <div
      class="flex items-center justify-between"
    >
      <h3
        class="text-lg font-semibold text-gray-800"
      >
        Build your custom file
      </h3>
      <div
        class="flex items-center space-x-6"
      >
        <span
          class=" rounded-full bg-data-700 border-4 w-4 h-4 border-data-400"
        />
        <span
          class=" rounded-full w-2 h-2 bg-gray-400"
        />
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="flex flex-col p-3 bg-white border border-gray-300 rounded md:flex-row md:items-center md:justify-between hover:border-data-500"
        style="opacity: 0; transform: translateY(20px) translateZ(0);"
      >
        <div
          class="md:w-2/3"
        >
          <div
            class="flex items-center justify-start space-x-3"
          >
            <h3
              class="text-2xl font-extrabold text-gray-900"
            >
              First Question
            </h3>
          </div>
          <p
            class="text-sm text-gray-700 "
            style="opacity: 0; height: 0px; transform: translateY(-10px) translateZ(0);"
          >
            Description
          </p>
        </div>
        <div
          class="w-full mt-4 md:w-1/3 md:mt-0"
        >
          <div
            class="flex items-center justify-center"
          >
            <div
              class="w-full max-w-xs mx-auto"
            >
              <div
                class="space-y-1"
              >
                <div
                  class="relative"
                >
                  <span
                    class="inline-block w-full rounded-md shadow-sm"
                  >
                    <button
                      aria-haspopup="true"
                      aria-label="First Question"
                      class="relative w-full py-2 pl-3 pr-10 text-left transition duration-150 ease-in-out bg-white border border-gray-300 rounded-md cursor-default focus:outline-none focus:shadow-outline-blue focus:border-blue-300 sm:text-sm sm:leading-5"
                      id="headlessui-listbox-button-1"
                      type="button"
                    >
                      <span
                        class="flex items-center h-5 truncate"
                      />
                      <span
                        class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
                      >
                        <svg
                          class="w-5 h-5 text-gray-400"
                          fill="none"
                          stroke="currentColor"
                          viewBox="0 0 20 20"
                        >
                          <path
                            d="M7 7l3-3 3 3m0 6l-3 3-3-3"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="1.5"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
